--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:id="@+id/coordinator_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.hana.aplikasinote.MainActivity">
+    tools:context="com.example.asus.note.MainActivity">
 
     <include layout="@layout/content_main" />
 
